# SRHD-XenoModKit

./: .gitignore  AUDIT_RU.md  AUTHORS.md  QUESTS_RU.md  README.md  README_RU.md  SCRIPTING_GUIDE_RU.md  THIRD_PARTY_NOTICES.md  THIRD_PARTY_TOOLS_RU.md  pyproject.toml  srhd.cmd  srhd.py
.agents/skills/srhd-modkit/: SKILL.md
.agents/skills/srhd-modkit/agents/: openai.yaml
.agents/skills/srhd-modkit/references/: commands.md
scripts/: setup-tools.ps1
srhd_modkit/: __init__.py  audit.py  blockpar.py  cli.py  compat.py  discovery.py  files.py  formats.py  game_text.py  hidden_process.py  image_codec.py  legacy_manifest.py  modcfg.py  models.py  module_info.py  quest_formula.py  quests.py  release.py  resources.py  rscript_api.py  runtime_lint.py  script_artifacts.py  scripts.py  textio.py  toolchain.py  validation.py
tests/: test_audit.py  test_blockpar.py  test_compat.py  test_formats.py  test_game_text.py  test_hidden_process.py  test_image_codec.py  test_quests.py  test_release.py  test_resources.py  test_runtime_lint.py  test_script_artifacts.py  test_scripts.py  test_stage.py  test_toolchain_integration.py  test_toolchain_workflows.py
tests/fixtures/: dat_patch.json  unicode_blockpar.txt
