[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "srhd-modkit"
version = "0.8.4"
description = "Safe inspection, conversion and release tools for Space Rangers HD mods"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []
authors = [
  { name = "Xenomorphchyma" },
]
keywords = ["space-rangers-hd", "space-rangers-2", "modding", "modkit", "srhd"]

[project.scripts]
srhd-mod = "srhd_modkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["srhd_modkit*"]
